--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,4 +1,3 @@
-
 {
   "manifest_version": 3,
   "name": "mtab+ New Tab",
@@ -10,12 +9,8 @@
   "permissions": [
     "storage",
     "bookmarks",
-    "tabs",
-    "fileSystem"
+    "tabs"
   ],
-  "background": {
-    "service_worker": "background.js"
-  },
   "action": {
     "default_icon": {
       "16": "icons/icon16.png",
@@ -31,6 +26,6 @@
     "128": "icons/icon128.png"
   },
   "content_security_policy": {
-    "extension_pages": "script-src 'self'; object-src 'self'"
+    "extension_pages": "script-src 'self'; object-src 'self';"
   }
 }
